// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineChart - mouse events Should render callout correctly on mouseover 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_9"
  >
    <div
      id="defaultTabbableElement_10"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone12"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="LineChart. Line chart with 1 lines. The X axis displays values. The Y axis displays values. "
        focusable="false"
        height="310"
        role="region"
        style="display: block;"
        width="108"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_9"
          text-anchor="middle"
          transform="translate(0, 275)"
        >
          <path
            class="domain"
            d="M40.5,6V0.5H88.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(40.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(52.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              25
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(64.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(76.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              35
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(88.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              40
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_9"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M-6,275.5H0.5V20.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,275.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,211.75)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,148)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              40
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,84.25)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              60
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,20.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              80
            </text>
          </g>
        </g>
        <g>
          <line
            id="verticalLine3"
            stroke="#323130"
            stroke-dasharray="5,5"
            transform="translate(40, 115.625)"
            visibility="visibility"
            x1="0"
            x2="0"
            y1="0"
            y2="165.375"
          />
          <g>
            <g
              aria-label="metaData1, line 1 of 1 with 2 data points."
              role="region"
            >
              <line
                id="lineID1_0_1"
                opacity="1"
                stroke="red"
                stroke-linecap="round"
                stroke-width="4"
                x1="40"
                x2="88"
                y1="115.625"
                y2="20"
              />
              <path
                aria-label="20. metaData1, 50."
                d="M34.5 115.625
     A5.5 5.5 0 1 0 45.5 115.625
     M34.5 115.625
     A 5.5 5.5 0 1 1 45.5 115.625
     "
                data-is-focusable="true"
                fill="#ffffff"
                id="circle0_0_1"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="0"
              />
              <path
                aria-label="40. metaData1, 80."
                d="M87.5 20
     A0.5 0.5 0 1 0 88.5 20
     M87.5 20
     A 0.5 0.5 0 1 1 88.5 20
     "
                data-is-focusable="true"
                fill="red"
                id="circle0_0_11L"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="-1"
              />
              <circle
                cx="88"
                cy="20"
                focusable="false"
                id="circle0_0_11D"
                opacity="0"
                r="8"
                stroke-width="0"
                width="0"
              />
            </g>
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone13"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: nowrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="1"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`LineChart - mouse events Should render customized callout on mouseover 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_9"
  >
    <div
      id="defaultTabbableElement_10"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone12"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="LineChart. Line chart with 1 lines. The X axis displays values. The Y axis displays values. "
        focusable="false"
        height="310"
        role="region"
        style="display: block;"
        width="108"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_9"
          text-anchor="middle"
          transform="translate(0, 275)"
        >
          <path
            class="domain"
            d="M40.5,6V0.5H88.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(40.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(52.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              25
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(64.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(76.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              35
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(88.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              40
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_9"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M-6,275.5H0.5V20.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,275.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,211.75)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,148)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              40
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,84.25)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              60
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,20.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              80
            </text>
          </g>
        </g>
        <g>
          <line
            id="verticalLine3"
            stroke="#323130"
            stroke-dasharray="5,5"
            transform="translate(40, 115.625)"
            visibility="visibility"
            x1="0"
            x2="0"
            y1="0"
            y2="165.375"
          />
          <g>
            <g
              aria-label="metaData1, line 1 of 1 with 2 data points."
              role="region"
            >
              <line
                id="lineID1_0_1"
                opacity="1"
                stroke="red"
                stroke-linecap="round"
                stroke-width="4"
                x1="40"
                x2="88"
                y1="115.625"
                y2="20"
              />
              <path
                aria-label="20. metaData1, 50."
                d="M34.5 115.625
     A5.5 5.5 0 1 0 45.5 115.625
     M34.5 115.625
     A 5.5 5.5 0 1 1 45.5 115.625
     "
                data-is-focusable="true"
                fill="#ffffff"
                id="circle0_0_1"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="0"
              />
              <path
                aria-label="40. metaData1, 80."
                d="M87.5 20
     A0.5 0.5 0 1 0 88.5 20
     M87.5 20
     A 0.5 0.5 0 1 1 88.5 20
     "
                data-is-focusable="true"
                fill="red"
                id="circle0_0_11L"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="-1"
              />
              <circle
                cx="88"
                cy="20"
                focusable="false"
                id="circle0_0_11D"
                opacity="0"
                r="8"
                stroke-width="0"
                width="0"
              />
            </g>
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone13"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: nowrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="1"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        class=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 2px;
              box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
              box-sizing: border-box;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
              z-index: 1000000;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
            {
              animation-duration: 0.367s;
              animation-fill-mode: both;
              animation-name: keyframes from{opacity:0;}to{opacity:1;} keyframes from{transform:translate3d(0,-10px,0);pointer-events:none;}to{transform:translate3d(0,0,0);pointer-events:auto;};
              animation-timing-function: cubic-bezier(.1,.9,.2,1);
            }
        data-is-focusable="true"
        id="toolTipcircle0_0_1"
        style="top: 15px; left: 8px; max-height: 745px;"
        tabindex="-1"
      >
        <div
          class=
              ms-Callout-main
              {
                background-color: #ffffff;
                border-radius: 2px;
                overflow-x: hidden;
                overflow-y: auto;
                position: relative;
                width: 100%;
              }
          style="outline: none; max-height: 100%;"
        >
          <div
            class=

                {
                  background-blend-mode: normal, luminosity;
                  background-color: #ffffff;
                  display: grid;
                  overflow: hidden;
                  padding-bottom: 10px;
                  padding-left: 16px;
                  padding-right: 16px;
                  padding-top: 11px;
                }
          >
            <div
              class=

                  {
                    display: flex;
                    flex-direction: row;
                    justify-content: space-between;
                  }
            >
              <div
                class=

                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      color: #605e5c;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 12px;
                      font-weight: 400;
                      line-height: 16px;
                      opacity: 0.85;
                    }
                data-is-focusable="false"
                role="text"
              >
                20
              </div>
            </div>
            <div>
              <div
                data-is-focusable="false"
                role="text"
              >
                <div>
                  <div
                    class=

                        {
                          -moz-osx-font-smoothing: grayscale;
                          -webkit-font-smoothing: antialiased;
                          border-left: 4px solid red;
                          color: #323130;
                          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                          font-size: 16px;
                          font-weight: 400;
                          margin-top: 13px;
                          padding-left: 8px;
                        }
                        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                          forced-color-adjust: none;
                        }
                    id="0_50"
                  >
                    <div>
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #605e5c;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              color: CanvasText;
                            }
                      >
                         
                        metaData1
                      </div>
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 16px;
                              font-weight: bold;
                              line-height: 22px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              color: CanvasText;
                            }
                      >
                        50
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineChart - mouse events Should render customized callout per stack on mouseover 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_9"
  >
    <div
      id="defaultTabbableElement_10"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone12"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="LineChart. Line chart with 1 lines. The X axis displays values. The Y axis displays values. "
        focusable="false"
        height="310"
        role="region"
        style="display: block;"
        width="108"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
              & path {
                display: none;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_9"
          text-anchor="middle"
          transform="translate(0, 275)"
        >
          <path
            class="domain"
            d="M40.5,6V0.5H88.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(40.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(52.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              25
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(64.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              30
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(76.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              35
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(88.5,0)"
          >
            <line
              stroke="currentColor"
              y2="6"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="16"
            >
              40
            </text>
          </g>
        </g>
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_9"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M-6,275.5H0.5V20.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,275.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,211.75)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              20
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,148)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              40
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,84.25)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              60
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,20.5)"
          >
            <line
              stroke="currentColor"
              x2="48"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              x="-10"
            >
              80
            </text>
          </g>
        </g>
        <g>
          <line
            id="verticalLine3"
            stroke="#323130"
            stroke-dasharray="5,5"
            transform="translate(40, 115.625)"
            visibility="visibility"
            x1="0"
            x2="0"
            y1="0"
            y2="165.375"
          />
          <g>
            <g
              aria-label="metaData1, line 1 of 1 with 2 data points."
              role="region"
            >
              <line
                id="lineID1_0_1"
                opacity="1"
                stroke="red"
                stroke-linecap="round"
                stroke-width="4"
                x1="40"
                x2="88"
                y1="115.625"
                y2="20"
              />
              <path
                aria-label="20. metaData1, 50."
                d="M34.5 115.625
     A5.5 5.5 0 1 0 45.5 115.625
     M34.5 115.625
     A 5.5 5.5 0 1 1 45.5 115.625
     "
                data-is-focusable="true"
                fill="#ffffff"
                id="circle0_0_1"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="0"
              />
              <path
                aria-label="40. metaData1, 80."
                d="M87.5 20
     A0.5 0.5 0 1 0 88.5 20
     M87.5 20
     A 0.5 0.5 0 1 1 88.5 20
     "
                data-is-focusable="true"
                fill="red"
                id="circle0_0_11L"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="-1"
              />
              <circle
                cx="88"
                cy="20"
                focusable="false"
                id="circle0_0_11D"
                opacity="0"
                r="8"
                stroke-width="0"
                width="0"
              />
            </g>
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style=""
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone13"
                data-tabster="{\\"uncontrolled\\": {}}"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: nowrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="1"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                          :host(.ms-Fabric--isFocusVisible) &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=
          ms-Callout-container
          {
            position: relative;
          }
    >
      <div
        class=
            ms-Callout
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-radius: 2px;
              box-shadow: 0 6.4px 14.4px 0 rgba(0, 0, 0, 0.132), 0 1.2px 3.6px 0 rgba(0, 0, 0, 0.108);
              box-sizing: border-box;
              display: flex;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              outline: transparent;
              position: absolute;
              z-index: 1000000;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: WindowText;
              border-style: solid;
              border-width: 1px;
            }
            &::-moz-focus-inner {
              border: 0px;
            }
            {
              animation-duration: 0.367s;
              animation-fill-mode: both;
              animation-name: keyframes from{opacity:0;}to{opacity:1;} keyframes from{transform:translate3d(0,-10px,0);pointer-events:none;}to{transform:translate3d(0,0,0);pointer-events:auto;};
              animation-timing-function: cubic-bezier(.1,.9,.2,1);
            }
        data-is-focusable="true"
        id="toolTipcircle0_0_1"
        style="top: 15px; left: 8px; max-height: 745px;"
        tabindex="-1"
      >
        <div
          class=
              ms-Callout-main
              {
                background-color: #ffffff;
                border-radius: 2px;
                overflow-x: hidden;
                overflow-y: auto;
                position: relative;
                width: 100%;
              }
          style="outline: none; max-height: 100%;"
        >
          <div>
            <pre>
              {
  "x": 20,
  "values": [
    {
      "legend": "metaData1",
      "y": 50,
      "color": "red",
      "index": -1
    }
  ]
}
            </pre>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
